--- a/pades/student'sPersonalAccount.html
+++ b/pades/student'sPersonalAccount.html
@@ -341,57 +341,7 @@
                                     </div>
                                 </div>
                                 <div class="admin__item-line"></div>
-                                <div class="carousel carousel-slider">
-                                    <div class="admin__item-content carousel-item">
-                                        <img src="../images/foto_events.jpg" alt="" class="events__content-foto">
-                                        <div class="events__content-info">
-                                            <p class="events__content-name">Лидерство во времена турбулентности</p>
-                                            <p class="events__content-data">12.01.2023</p>
-                                            <p class="events__content-text">Приглашаем всех желающих 15 ноября 2022 в
-                                                12:30
-                                                (МСК) на открытый вебинар "Лидерство во времена турбулентности". Спикеры
-                                                —
-                                                СВЕТЛАНА БОНДАРЧУК, АННА МЕДНИКОВА и ЕЛЕНА КОВАЛЕВА.</p>
-                                            <a class="events__more-arrow" href="">
-                                                <p class="events__more-text">Подробнее</p><img class="events__arrow"
-                                                    src="../images/Arrow_long.svg" alt="">
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <div class="admin__item-content carousel-item">
-                                        <img src="../images/foto_events.jpg" alt="" class="events__content-foto">
-                                        <div class="events__content-info">
-                                            <p class="events__content-name">Лидерство во времена турбулентности</p>
-                                            <p class="events__content-data">12.01.2023</p>
-                                            <p class="events__content-text">Приглашаем всех желающих 15 ноября 2022 в
-                                                12:30
-                                                (МСК) на открытый вебинар "Лидерство во времена турбулентности". Спикеры
-                                                —
-                                                СВЕТЛАНА БОНДАРЧУК, АННА МЕДНИКОВА и ЕЛЕНА КОВАЛЕВА.</p>
-                                            <a class="events__more-arrow" href="">
-                                                <p class="events__more-text">Подробнее</p><img class="events__arrow"
-                                                    src="../images/Arrow_long.svg" alt="">
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <div class="admin__item-content carousel-item">
-                                        <img src="../images/foto_events.jpg" alt="" class="events__content-foto">
-                                        <div class="events__content-info">
-                                            <p class="events__content-name">Лидерство во времена турбулентности</p>
-                                            <p class="events__content-data">12.01.2023</p>
-                                            <p class="events__content-text">Приглашаем всех желающих 15 ноября 2022 в
-                                                12:30
-                                                (МСК) на открытый вебинар "Лидерство во времена турбулентности". Спикеры
-                                                —
-                                                СВЕТЛАНА БОНДАРЧУК, АННА МЕДНИКОВА и ЕЛЕНА КОВАЛЕВА.</p>
-                                            <a class="events__more-arrow" href="">
-                                                <p class="events__more-text">Подробнее</p><img class="events__arrow"
-                                                    src="../images/Arrow_long.svg" alt="">
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- <div class="admin__item-content">
+                                <div class="admin__item-content">
                                     <img src="../images/foto_events.jpg" alt="" class="events__content-foto">
                                     <div class="events__content-info">
                                         <p class="events__content-name">Лидерство во времена турбулентности</p>
@@ -405,14 +355,14 @@
                                             <p class="events__more-text">Подробнее</p><img class="events__arrow"
                                                 src="../images/Arrow_long.svg" alt="">
                                         </a>
-                                        <div class="events__item-transition">
-                                            <a class="admin__transition-back" href="#"><img
-                                                    src="../images/arrow-back.svg" alt=""></a>
-                                            <a class="admin__transition-next" href="#"><img
-                                                    src="../images/arrow-next.svg" alt=""></a>
-                                        </div>
                                     </div>
-                                </div> -->
+                                </div>
+                                <div class="events__item-transition events__tradition-mobile">
+                                    <a class="admin__transition-back" href="#"><img
+                                            src="../images/arrow-back.svg" alt=""></a>
+                                    <a class="admin__transition-next" href="#"><img
+                                            src="../images/arrow-next.svg" alt=""></a>
+                                </div>
                             </div>
                             <div class="events__flex-item">
                                 <div class="admin__events">
@@ -425,75 +375,26 @@
                                     </div>
                                 </div>
                                 <div class="admin__item-line"></div>
-                                <div class="carousel carousel-slider">
-                                    <div class="admin__item-content carousel-item">
-                                        <img src="../images/foto_course.jpg" alt="" class="events__content-foto">
-                                        <div class="events__content-info">
-                                            <p class="events__content-name">Новый курс: Китайский безлимит</p>
-                                            <p class="events__content-data">12.01.2023</p>
-                                            <p class="events__content-text">Приглашаем всех желающих 15 ноября 2022 в
-                                                12:30
-                                                (МСК) на открытый вебинар "Лидерство во времена турбулентности". Спикеры
-                                                —
-                                                СВЕТЛАНА БОНДАРЧУК, АННА МЕДНИКОВА и ЕЛЕНА КОВАЛЕВА.</p>
-                                            <a class="events__more-arrow" href="">
-                                                <p class="events__more-text">Подробнее</p><img class="events__arrow"
-                                                    src="../images/Arrow_long.svg" alt="">
-                                            </a>
-                                            <div class="events__item-transition">
-                                                <a class="admin__transition-back" href="#"><img
-                                                        src="../images/arrow-back.svg" alt=""></a>
-                                                <a class="admin__transition-next" href="#"><img
-                                                        src="../images/arrow-next.svg" alt=""></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="admin__item-content carousel-item">
-                                        <img src="../images/foto_course.jpg" alt="" class="events__content-foto">
-                                        <div class="events__content-info">
-                                            <p class="events__content-name">Новый курс: Китайский безлимит</p>
-                                            <p class="events__content-data">12.01.2023</p>
-                                            <p class="events__content-text">Приглашаем всех желающих 15 ноября 2022 в
-                                                12:30
-                                                (МСК) на открытый вебинар "Лидерство во времена турбулентности". Спикеры
-                                                —
-                                                СВЕТЛАНА БОНДАРЧУК, АННА МЕДНИКОВА и ЕЛЕНА КОВАЛЕВА.</p>
-                                            <a class="events__more-arrow" href="">
-                                                <p class="events__more-text">Подробнее</p><img class="events__arrow"
-                                                    src="../images/Arrow_long.svg" alt="">
-                                            </a>
-                                            <div class="events__item-transition">
-                                                <a class="admin__transition-back" href="#"><img
-                                                        src="../images/arrow-back.svg" alt=""></a>
-                                                <a class="admin__transition-next" href="#"><img
-                                                        src="../images/arrow-next.svg" alt=""></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="admin__item-content carousel-item">
-                                        <img src="../images/foto_course.jpg" alt="" class="events__content-foto">
-                                        <div class="events__content-info">
-                                            <p class="events__content-name">Новый курс: Китайский безлимит</p>
-                                            <p class="events__content-data">12.01.2023</p>
-                                            <p class="events__content-text">Приглашаем всех желающих 15 ноября 2022 в
-                                                12:30
-                                                (МСК) на открытый вебинар "Лидерство во времена турбулентности". Спикеры
-                                                —
-                                                СВЕТЛАНА БОНДАРЧУК, АННА МЕДНИКОВА и ЕЛЕНА КОВАЛЕВА.</p>
-                                            <a class="events__more-arrow" href="">
-                                                <p class="events__more-text">Подробнее</p><img class="events__arrow"
-                                                    src="../images/Arrow_long.svg" alt="">
-                                            </a>
-                                            <div class="events__item-transition">
-                                                <a class="admin__transition-back" href="#"><img
-                                                        src="../images/arrow-back.svg" alt=""></a>
-                                                <a class="admin__transition-next" href="#"><img
-                                                        src="../images/arrow-next.svg" alt=""></a>
-                                            </div>
-                                        </div>
+                                <div class="admin__item-content carousel-item">
+                                    <img src="../images/foto_course.jpg" alt="" class="events__content-foto">
+                                    <div class="events__content-info">
+                                        <p class="events__content-name">Новый курс: Китайский безлимит</p>
+                                        <p class="events__content-data">12.01.2023</p>
+                                        <p class="events__content-text">Приглашаем всех желающих 15 ноября 2022 в
+                                            12:30
+                                            (МСК) на открытый вебинар "Лидерство во времена турбулентности". Спикеры
+                                            —
+                                            СВЕТЛАНА БОНДАРЧУК, АННА МЕДНИКОВА и ЕЛЕНА КОВАЛЕВА.</p>
+                                        <a class="events__more-arrow" href="">
+                                            <p class="events__more-text">Подробнее</p><img class="events__arrow"
+                                                src="../images/Arrow_long.svg" alt="">
+                                        </a>
                                     </div>
                                 </div>
-                                
+                                <div class="events__item-transition events__tradition-mobile">
+                                    <a class="admin__transition-back" href="#"><img src="../images/arrow-back.svg" alt=""></a>
+                                    <a class="admin__transition-next" href="#"><img src="../images/arrow-next.svg" alt=""></a>
+                                </div>                         
                             </div>
                         </div>
                     </div>
